k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-svc
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
